# transcriber

./: .gitignore  CLAUDE_CONTEXT.md  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
music_scale/: __init__.py  __main__.py  finder.py  fingering.py  gui.py  guitar.py  launcher.py  main_ui_template.html  main_ui_template1.html  main_ui_template10.html  main_ui_template2.html  main_ui_template3.html  main_ui_template4.html  main_ui_template5.html  main_ui_template7.html  main_ui_template8.html  melody_transcriber.py  models.py  notes.py  one.py  playback.py  scales.py  session.py  tab_sequencer_ui_template.html  theory.py  transcriber_ui_template.html  web_ui.py
tests/: test_analysis_models.py  test_chord_entry_ui.py  test_finder_engine.py  test_fingering_pipeline.py  test_melody_transcriber.py  test_music_scale.py  test_playback_timeline.py  test_session_workflow.py  test_theory_engine.py  test_web_api.py
