[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "music-scale-finder"
version = "0.1.0"
description = "Interactive music scale finder with melody transcription support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Music Scale Contributors" }
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
music-scale = "music_scale.launcher:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "__pycache__"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
